<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_margin="@dimen/activity_horizontal_margin">
    <TextView
        android:id="@+id/phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/phonenumber"
        android:textSize="@dimen/textsize_x"/>
    <EditText 
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"/>
    
  	<EditText 
        android:id="@+id/password_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="textPassword"
        android:hint="@string/password_reset"/>
    
  	<Button
        android:id="@+id/register_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/register_complete"/>
</LinearLayout>
