<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1eeed"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="#3d5062"
            android:text="@string/province"
            android:textSize="@dimen/textsize" />

        <Spinner
            android:id="@+id/spinner_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/provinces" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="#3d5062"
            android:text="@string/city"
            android:textSize="@dimen/textsize" />

        <Spinner
            android:id="@+id/spinner_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/cities_guangdong" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/shool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="#3d5062"
            android:text="@string/school"
            android:textSize="@dimen/textsize" />

        <Spinner
            android:id="@+id/spinner_school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/schools_shenzhen" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="#3d5062"
        android:layout_marginTop="10dp"
        android:text="@string/register_school_tips" />

    <CheckBox
        android:id="@+id/contract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        android:button="@drawable/bg_checkbox"
        android:text="@string/contract" />

    <Button
        android:id="@+id/nextbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_register_button"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/nextbtn"
        android:textColor="#FFF"
        android:textSize="20sp" />

</LinearLayout>