<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.myxiaoapp.android.VerifyActivity" >

        <TextView
            android:id="@+id/auth_explain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/verify_explain"
            android:textColor="#777" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/student_num_text"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/student_num" />

            <EditText
                android:id="@+id/student_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/student_passwd_text"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/student_passwd" />

            <EditText
                android:id="@+id/student_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/verify_tip" />

            <EditText
                android:id="@+id/verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/verify_image"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:src="@color/white" />

            <TextView
                android:id="@+id/pull_verifyImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_gravity="bottom"
                android:clickable="true"
                android:textColor="@color/get_verify_color"
                android:text="@string/get_verify_tip"/>
        </LinearLayout>

        <Button
            android:id="@+id/vertify_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
     		android:background="@drawable/bg_verify_button"
	        android:textColor="#FFFFFF"
            android:text="@string/school_verify" />
    </LinearLayout>

</ScrollView>